docs: Phase 3 finding — DB clone OK, runtime boot blocked by agent shell
Cloned the live `next` DB into an isolated `amx_test` and staged a run
config; the emulator boots through DB connect/config/threads/plugins/texts
but fails creating the Netty selector: Selector.open() -> "Unable to
establish loopback connection" (AF_UNIX connect0 "Invalid argument").

Proven to be the agent's execution shell, not the code or JDK: a bare
Selector.open() fails identically on JDK 21 AND 25. The user must capture
the performance baseline from a normal terminal (command in the design doc).
Does NOT implicate the Java 25 upgrade.